--- a/city.html
+++ b/city.html
@@ -9,108 +9,120 @@
 <body>
     <div class="container">
         <div class="heading">
-        <img src="city logo.png" alt="city logo" width="90px" >
-        <h1>Manchester City Football Club</h1>
-        <img src="city logo.png" alt="city logo" width="90px" >
+            <img src="city logo.png" alt="city logo" width="90px" >
+            <h1>Manchester City Football Club</h1>
+            <img src="city logo.png" alt="city logo" width="90px" >
         </div>
+        <h2>Manager: Pep Gardiola</h2>
 
         <div class="navs">
-            <button id="home">HOME</button>
-            <button id="goalKeepers">GOALKEEPERS</button>
-            <button id="defenders">DEFENDERS</button>
-            <button id="midfielders">MIDFIELDERS</button>
-            <button id="forward">FORWARDS</button>
+            <button id="home">Home</button>
+            <button id="goalKeepers">GoalKeepers</button>
+            <button id="defenders">Defenders</button>
+            <button id="midfielders">Midfielders</button>
+            <button id="forwards">Forwards</button>
         </div>
 
+        <h3 id="display">Manchester City Team</h3>
+
+        <div id="show"></div>
+
         <div id="body">
-            <button>
-                <div id="ederson">
-                <img src="ederson.webp" alt="ederson" width="60px">
+           <button>
+                <div id="players">
+                <img src="ederson.webp" alt="ederson" width="70px">
                 <p>Ederson</p>
                 </div>
             </button>
             </button>
             <button>
-                <div id="Rodri">
-                <img src="rodrigo.webp" alt="Rodri" width="60px">
+                <div id="players">
+                <img src="rodrigo.webp" alt="Rodri" width="70px">
                 <p>Rodri</p>
                 </div>
             </button>
             <button>
-                <div id="Kevin De Bruyne">
-                <img src="kevin-de-bruyne.webp" alt="kdb" width="60px">
+                <div id="players">
+                <img src="kevin-de-bruyne.webp" alt="kdb" width="70px">
                 <p>Kevin De Bruyne</p>
                 </div>
             </button>
             <button>
-                <div id="Ortega">
-                <img src="stefan-ortega-moreno.webp" alt="ortega" width="60px">
+                <div id="players">
+                <img src="stefan-ortega-moreno.webp" alt="ortega" width="70px">
                 <p>Ortega</p>
                 </div>
             </button>
             <button>
-                <div id="Haaland">
-                <img src="erling-haaland.webp" alt="Haaland" width="60px">
+                <div id="players">
+                <img src="erling-haaland.webp" alt="Haaland" width="70px">
                 <p>Haaland</p>
                 </div>
             </button>
             <button>
-                <div id="Grealish">
-                <img src="jack-grealish.webp" alt="Grealish" width="60px">
+                <div id="players">
+                <img src="jack-grealish.webp" alt="Grealish" width="70px">
                 <p>Grealish</p>
                 </div>
             </button>
             <button>
-                <div id="Foden">
-                <img src="phil-foden.webp" alt="Foden" width="60px">
+                <div id="players">
+                <img src="phil-foden.webp" alt="Foden" width="70px">
                 <p>Foden</p>
                 </div>
             </button>
             <button>
-                <div id="Alvarez">
-                <img src="julian-alvarez.webp" alt="Alvarez" width="60px">
+                <div id="players">
+                <img src="julian-alvarez.webp" alt="Alvarez" width="70px">
                 <p>Alvarez</p>
                 </div>
             </button>
             <button>
-                <div id="Walker">
-                <img src="kyle-walker.webp" alt="Walker" width="60px">
+                <div id="players">
+                <img src="kyle-walker.webp" alt="Walker" width="70px">
                 <p>Walker</p>
                 </div>
             </button>
             <button>
-                <div id="Dias">
-                <img src="ruben-dias.webp" alt="Dias" width="60px">
+                <div id="players">
+                <img src="ruben-dias.webp" alt="Dias" width="70px">
                 <p>Dias</p>
                 </div>
             </button>
             <button>
-                <div id="Bernado">
-                <img src="bernardo-silva.webp" alt="Bernado" width="60px">
+                <div id="players">
+                <img src="bernardo-silva.webp" alt="Bernado" width="70px">
                 <p>Bernado</p>
                 </div>
             </button>
             <button>
-                <div id="Stones">
-                <img src="john-stones.webp" alt="Stones" width="60px">
+                <div id="players">
+                <img src="john-stones.webp" alt="Stones" width="70px">
                 <p>Stones</p>
                 </div>
             </button>
             <button>
-                <div id="Doku">
-                <img src="jeremy-doku.webp" alt="Doku" width="60px">
+                <div id="players">
+                <img src="jeremy-doku.webp" alt="Doku" width="70px">
                 <p>Doku</p>
                 </div>
             </button>
             <button>
-                <div id="Akanji">
-                <img src="manuel-akanji.webp" alt="Akanji" width="60px">
+                <div id="players">
+                <img src="manuel-akanji.webp" alt="Akanji" width="70px">
                 <p>Akanji</p>
+                </div>
+            </button>
+            <button>
+                <div id="players">
+                <img src="josko-gvardiol.webp" alt="Gvardiol" width="70px">
+                <p>Gvardiol</p>
                 </div>
             </button>
         </div>
     
     </div>
+  
     
 
     <script src="script.js"></script>
