--- a/city.html
+++ b/city.html
@@ -28,7 +28,7 @@
         <div id="show"></div>
 
         <div id="body">
-           <button>
+           <!--<button>
                 <div id="players">
                 <img src="ederson.webp" alt="ederson" width="70px">
                 <p>Ederson</p>
@@ -118,7 +118,7 @@
                 <img src="josko-gvardiol.webp" alt="Gvardiol" width="70px">
                 <p>Gvardiol</p>
                 </div>
-            </button>
+            </button>-->
         </div>
     
     </div>
